--- a/style.css
+++ b/style.css
@@ -127,19 +127,148 @@ html, body{
 
   50% {
     background: #d0bdf4;
-    /* background: #ffa8b6; */
   }
 
   75% {
-    /* background: #c2c2c2; */
-    /* background: #d0bdf4; */
     background: #d2d2d2;
-    /* background: rgb(250, 195, 8); */
   }
 
   100% {
-    /* background: #ffa8b6; */
-    /* background: #c2c2c2; */
     background: rgb(250, 195, 8);
+  }
+}
+
+.svgwaala {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-image: url(/Images/back1.jpg);
+  background-size: cover;
+  background-position: bottom;
+  opacity: 0;
+  overflow: hidden;
+  transition: all cubic-bezier(0.19, 1, 0.22, 1) 1.5s;
+  z-index: 99;
+}
+
+#dotted {
+  width: 130%;
+  height: 130vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-image: url(/Images/back.png);
+  background-size: cover;
+  background-position: center;
+  animation: dotte 8s ease-in-out alternate infinite;
+  /* overflow: hidden; */
+}
+
+#dotted > img:nth-child(1) {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 12vw;
+  animation: updown 2s ease-in-out alternate infinite;
+  opacity: 0;
+}
+
+#kothik-k {
+  position: absolute;
+  width: 9vw;
+  top: 25%;
+  left: 39%;
+  animation: letter 1.9s ease-in-out alternate infinite;
+}
+#kothik-k2 {
+  position: absolute;
+  width: 5vw;
+  top: 43%;
+  left: 42%;
+  animation: letter 1.9s ease-in-out alternate infinite;
+}
+#kothik-o {
+  position: absolute;
+  width: 7vw;
+  top: 25%;
+  left: 54%;
+  z-index: 2;
+  animation: letter 1.8s ease-in-out alternate infinite;
+}
+#kothik-t {
+  position: absolute;
+  width: 10vw;
+  top: 38%;
+  left: 54%;
+  animation: letter 1.9s ease-in-out alternate infinite;
+}
+#kothik-h {
+  position: absolute;
+  width: 7vw;
+  top: 50%;
+  left: 53%;
+  animation: letter 1.8s ease-in-out alternate infinite;
+}
+#kothik-i {
+  position: absolute;
+  width: 15vw;
+  top: 44%;
+  left: 38%;
+  z-index: 9;
+  animation: letter 1.9s ease-in-out alternate infinite;
+}
+
+
+#explore {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  top: 75.6%;
+  width: 7vw;
+  height: 2vw;
+  color: #ffffff;
+  background: rgba(255, 255, 255, 0.45);
+  box-shadow: 0 8px 32px 0 rgba(229, 116, 45, 0.37);
+  backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
+  border-radius: 10px;
+  font-size: 0.5vw;
+  cursor: pointer;
+  font-family: product sans;
+}
+
+#explore a h1 {
+  color: #fff;
+}
+
+@keyframes updown {
+  from {
+    margin-top: -1vw;
+  }
+
+  to {
+    margin-top: 1vw;
+  }
+}
+
+@keyframes letter {
+  from {
+    margin-top: 0vw;
+  }
+
+  to {
+    margin-top: 1vw;
+  }
+}
+
+@keyframes dotte {
+  from {
+    margin-top: -15%;
+    margin-left: -15%;
   }
 }
